<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
     android:id="@+id/requestclaimheading"
            style="@style/OrangeButtons"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/requestclaim"
    />
    
    
    <Spinner
        android:id="@+id/member_name"
        style="@style/OrangeButtons"
   	 	android:layout_marginTop="50dp"
    	android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:entries="@array/member_names"
        android:hint="@string/member" 
        android:prompt="@string/member"
        />
    
	<EditText
    	android:id="@+id/t_date" 
    	style="@style/OrangeButtons"
    	android:layout_marginTop="50dp"
    	android:layout_marginLeft="5dp"
		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:textColor="#FFFFFF"
    	android:gravity="left"
    	android:inputType="date"
    	android:hint="@string/select_date"
    	android:onClick="showDatePickerDialog" />


	<Spinner
        android:id="@+id/request_type"
        style="@style/OrangeButtons"
   	 	android:layout_marginTop="50dp"
    	android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:entries="@array/request_types"
        android:hint="@string/requesttype" 
        />
	
	
<Spinner
        android:id="@+id/claim_category"
        style="@style/OrangeButtons"
   	 	android:layout_marginTop="50dp"
    	android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:entries="@array/select_categories"
        android:hint="@string/category" 
        />
	

	<EditText
    android:id="@+id/claim_items" 
    style="@style/OrangeButtons"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="5dp"
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="#FFFFFF"
    android:lines="8"
    android:gravity="top|left"
    android:inputType="textMultiLine"
    android:hint="@string/items"
     />

<EditText
    android:id="@+id/claim_amount" 
    style="@style/OrangeButtons"
    android:layout_marginTop="50dp"
    android:layout_marginLeft="5dp"
	android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="#FFFFFF"
    android:gravity="left"
    android:inputType="numberDecimal"
    android:hint="@string/amount"
     />
	

    <Button
            android:id="@+id/claim_submit"
            style="@style/OrangeButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/submit"
            android:onClick="submitClaim" />
</LinearLayout>
</ScrollView>



